# 4limb-taiko

./: .gitignore  Cargo.toml  README.md
charts/Momoiro Taiko Paradise/: Momoiro Taiko Paradise.tja
src/: main.rs
src/sys/: chart.rs  hit.rs  mod.rs
