[package]
name = "four-limb-taiko"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5.0"
bevy_app = "0.5.0"
bevy_ecs = "0.5.0"
bevy_wgpu = "0.5.0"
bevy_winit = { version = "0.5.0", features = [ "x11" ]}
bevy_input = "0.5.0"
rand = "0.8.4"
regex = "1.5.4"
rodio = "0.14.0"